2015-02-16  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/mips/sgidefs.h [!_ABIO64] (_ABIO64): New macro.

	* sysdeps/mips/memcpy.S [_COMPILING_NEWLIB]: Change condition to
	[defined _COMPILING_NEWLIB].
	* sysdeps/mips/memset.S [_COMPILING_NEWLIB]: Likewise.
	* sysdeps/mips/strcmp.S [_COMPILING_NEWLIB]: Likewise.

	* sysdeps/mips/sys/asm.h [__mips_isa_rev < 6]: Change condition to
	[!defined __mips_isa_rev || __mips_isa_rev < 6].

2015-02-16  Torvald Riegel  <triegel@redhat.com>

	* nptl/tst-cond25.c (cleanup): Explicitly check that the mutex is
	acquired.

2015-02-15  Matthew Fortune <Matthew.Fortune@imgtec.com>

	[BZ #17792]
	* sysdeps/unix/sysv/linux/ia64/sys/user.h (NBPG): Remove.
	(UPAGES, HOST_TEXT_START_ADDR, HOST_DATA_START_ADDR,
	HOST_STACK_END_ADDR): Likewise.

2015-02-13  Steve Ellcey  <sellcey@imgtec.com>

	* sysdeps/mips/bits/endian.h (__MIPSEB): Use #ifdef instead of #if.
	* sysdeps/mips/memcpy.S (__MIPSEB): Ditto.
	* sysdeps/mips/memset.S (__MIPSEB): Ditto.

2015-02-13  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/generic/c++-types.data: New file.
	* sysdeps/generic/ld.abilist: New file.
	* sysdeps/generic/libBrokenLocale.abilist: New file.
	* sysdeps/generic/libanl.abilist: New file.
	* sysdeps/generic/libc.abilist: New file.
	* sysdeps/generic/libcrypt.abilist: New file.
	* sysdeps/generic/libdl.abilist: New file.
	* sysdeps/generic/libm.abilist: New file.
	* sysdeps/generic/libpthread.abilist: New file.
	* sysdeps/generic/libresolv.abilist: New file.
	* sysdeps/generic/librt.abilist: New file.

2015-02-13  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17569]
	* sysdeps/ieee754/dbl-64/wordsize-64/s_remquo.c (__remquo):
	Compute absolute value of x as modified by fmod, not original
	value of x.
	* math/libm-test.inc (RUN_TEST_ffI_f1): Rename to
	RUN_TEST_ffI_f1_mod8.  Check extra return value mod 8.
	(RUN_TEST_LOOP_ffI_f1): Rename to RUN_TEST_LOOP_ffI_f1_mod8.  Call
	RUN_TEST_ffI_f1_mod8.
	(remquo_test_data): Add more tests.
